[project]
name = "ConcurrentExecutionEnhanced"
dynamic = ["version"]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = []

[project.urls]
Homepage = "https://github.com/twh970723/ConcurrentExecutionEnhanced"

[tool.setuptools.packages.find]

[tool.setuptools_scm]

[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"
